Fix navbar color on mobile

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,12 +1,3 @@
-/* ==================================================================
-
-*   Ceevee Media Queries
-*   url: styleshout.com
-*   03-18-2014
-
-/* ================================================================== */
-
-
 /* screenwidth less than 1024px
 --------------------------------------------------------------------- */
 @media only screen and (max-width: 1024px) {
@@ -112,7 +103,7 @@
 	   width: 48px;
 		height: 48px;
 		text-align: left;
-		background-color: #CC5200;
+		background-color: #11ABB0;
 		position: relative;
       border: none;
       float: right;
